[tool.poetry]
name = "pt-pielapse"
version = "0.1.0"
description = "Pan and track timelapse system built on raspberry pi"
authors = ["RawMatter.io"]
license = "GPL V3.0"

[tool.poetry.dependencies]
python = "^3.9"
adafruit-python-shell = "^1.3.2"
adafruit-circuitpython-motorkit = "^1.6.2"
adafruit-io = "^2.5.0"
fastapi = "^0.68.0"
"RPi.GPIO" = "^0.7.0"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
